# code-archaeologist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
docs/: architecture.mmd  protopedia-draft.md  video-storyboard.md
docs/superpowers/plans/: 2026-07-10-final-day-enhancements.md
docs/superpowers/specs/: 2026-07-05-code-archaeologist-design.md  2026-07-10-final-day-enhancements-design.md
evals/: questions.json  run.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AnswerPane.tsx  CodePane.tsx  FileTree.tsx  Timeline.tsx
spikes/: adk_spike.py
src/code_archaeologist/: auditor.py  cache.py  cli.py  excavator.py  github_tools.py  historian.py  llm.py  models.py  throttle.py  web.py
tests/: test_auditor.py  test_cache.py  test_excavator.py  test_github_tools.py  test_github_write.py  test_historian.py  test_models.py  test_throttle.py  test_web.py
