[project]
name = "code-archaeologist"
version = "0.1.0"
description = "An AI agent that answers 'why is this code the way it is?' with evidence from git history, PRs, and issues"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "google-genai>=1.0",
    "PyGithub>=2.4",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[project.scripts]
archaeologist = "code_archaeologist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_archaeologist"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
